src/sass/object/component/_formSection.scss
//
// Object > Component > Form Section
// -----------------------------------------------------------------

.c-formSection {
  display: grid;
  grid-auto-columns: 100%;
  grid-auto-flow: row;
  gap: $size-gap-base 0;
}

.c-formSection__heading {
  display: inline-block;
}

.c-formSection__body {
  &--horizontal {
    margin-bottom: -$size-gap-base*2;

    & > *:not(:last-child) {
      margin-right: $size-gap-base*2;
      margin-bottom: $size-gap-base*2;
    }
  }
  &--vertical {
    display: grid;
    grid-auto-columns: 100%;
    grid-auto-flow: row;
    gap: $size-gap-base*2 0;
  }
}

.c-formSection__row {
  display: flex;
  align-items: center;
  flex-wrap: wrap;

  & > * + * {
    margin-left: $size-gap-base;

    @include bp( md ) {
      margin-left: $size-gap-base*2;
    }
  }
}

